@@ -1,0 +1,22 @@
+subarch adsvgx
+cpuinfo adsvgx.cpuinfo
+majors 2.4
+flavour none
+kernel-2.4 none
+usable
+unusable \
+  kernel-image-2.4.25-bast \
+  kernel-image-2.4.25-lart \
+  kernel-image-2.4.25-riscpc \
+  kernel-image-2.4.25-riscstation \
+  kernel-image-2.4.26-bast \
+  kernel-image-2.4.26-lart \
+  kernel-image-2.4.26-riscpc \
+  kernel-image-2.4.26-riscstation \
+  kernel-image-2.4.27-bast \
+  kernel-image-2.4.27-lart \
+  kernel-image-2.4.27-riscpc \
+  kernel-image-2.4.27-riscstation \
+  kernel-image-2.4.25-netwinder \
+  kernel-image-2.4.26-netwinder \
+  kernel-image-2.4.27-netwinder
