@@ -15,8 +15,11 @@ base-installer (1.25) UNRELEASED; urgency=low
   * Remove unused base-installer/kernel/no-kernel template.
   * Support installing no kernel at all if the user doesn't want one.
     Closes: #304802, #247765
+  * Support ADS arm boards by installing no kernel, since no usable kernel is
+    in Debian for them yet.
+  * Add a test case for an ADS VGX board.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 12:25:46 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 12:56:41 -0400
 
 base-installer (1.24) unstable; urgency=low
 
